# matrix-test-bot

./: Cargo.toml  README.md  config.toml.example
src/: bot.rs  cfg.rs  handler.rs  main.rs
