[package]
name = "test-bot"
version = "0.1.0"
authors = ["wolf4ood <enrico.risa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1"
url = "2"
tokio= { version="1", features=["full"]}
async-trait="0.1"
regex = "1"
config = "0.10"
serde = "1"
tracing = "0.1"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.0"
reqwest = { version = "0.11"}

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk.git"
default-features = false
features = ["encryption", "rustls-tls", "markdown","sled_cryptostore", "sled_state_store"]

